<?php

namespace App\Service\WechatBot\Friend;

interface RemoteFriendManagerInterface
{

}