<?php

namespace App\Service\WechatBot\Group;
interface GroupInterface
{
    public function getGroupId(): string;
}